fixed arabic lang and image alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,8 +468,13 @@ h1, h2, h3, h4, h5, h6 {
 }
   
 
-.illustration{
-  margin-bottom: 20px;
+.illustration-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  margin-bottom: 40px;
+ 
 }
 
 /* END */
